# Bitfrost-

./: .gitignore  Makefile  README.md  SECURITY.md  install.sh  setup.py  test_ebpf.py
agent/: collector.go  executor.go  go.mod  main.go  paths.go
app/bifrost-desktop/: .gitignore  PKGBUILD  README.md  bifrost.desktop  bifrost.install  index.html  package-lock.json  (+4 more)
app/bifrost-desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/bifrost-desktop/src-tauri/capabilities/: default.json
app/bifrost-desktop/src-tauri/src/: banner.rs  lib.rs  main.rs
bifrost/: __main__.py  banner.py  baseline.py  bpf_collector.py  bpf_rules.py  collector_logging.py  dashboard.py  demo.py  event_queue.py  extractor.py  feedback.py  guardian.py  inference.py  ingest.py  live_monitor.py  ollama_client.py  paths.py  policy.py  reasoner.py  router.py  security.py
db/: events.db
demo/: demo.py
docs/: live-fire-validation-playbook.md
gjallarhorn/: alerts.py  dashboard.py  mqtt.py
heimdall/: brain.py  schema.py
lab/: __init__.py  scorecard.py  validate.py
tests/: test_auditd_collector_rotation.py  test_banner.py  test_collector_exception_logging.py  test_collectors.py  test_dashboard.py  test_demo_replays.py  test_event_router_pipeline.py  test_guardian_config_checksum.py  test_guardian_decision_validation.py  test_guardian_event_storage.py  test_guardian_policy.py  test_guardian_shutdown.py  test_inference_resilience.py  test_live_monitor.py  test_live_monitor_integration.py  test_network_watcher.py  test_paths.py  test_policy_gate.py  test_schema.py  test_security.py
(+44 files in other folders)
